# ModelFarm

./: .gitignore  README.md  pyproject.toml  test.sh  testscript.py  testscript_non_spot.py
.github/workflows/: main.yml
modelfarm/aws/: ec2.py  iam.py
tests/: conftest.py  test_ec2.py  test_iam.py
