[tool.poetry]
name = "modelfarm"
version = "0.0.1"
description = "Use spot instances to train models in the cloud"
authors = ["Pieter Blomme <pieter.blomme@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
awscli = "^1.24.0"
boto3 = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
